--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h3>150% de istenen goruntu cikiyor gelistriyorum</h3>
     <nav class="navbar">
         <img src="./images/s-l1200.png" alt="" class="navbar__logo">
         <ul class="navbar__menu--right">
