--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <h3>150% de istenen goruntu cikiyor gelistriyorum</h3>
     <nav class="navbar">
         <img src="./images/s-l1200.png" alt="" class="navbar__logo">
         <ul class="navbar__menu--right">
@@ -20,12 +19,12 @@
             <li><a href="#" id="register">Register</a></li>
         </ul>
     </nav>
-    <hr>
     <section class="main">
         <h1>JOIN OUR BEST CLUBB</h1>
         <div class="main__hero">
             <ul class="main__hero--list">
-                <li>Best experience</li>
+                <li>!--Gelistirme--</li>
+                <li>--Asamasindadir--!</li>
                 <li>Good opportunities</li>
                 <li>Valuable fellowship</li>
             </ul>
